fix:header and overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,4 @@
 
 body {
   background-color: #1c1c1c;
-  overflow: hidden;
 }
-
